Removed deprecated initializations